k8s/deployment-simple.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: word-picker
spec:
  replicas: 2
  selector:
    matchLabels:
      app: word-picker
      deployment: word-picker
  template:
    metadata:
      labels:
        app: word-picker
        deployment: word-picker
    spec:
      containers:
      - name: word-picker
        image: tinmancoding/word-picker:v1
