k8s/deployment-with-configmap.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: word-picker
spec:
  replicas: 3
  selector:
    matchLabels:
      app: word-picker
      deployment: word-picker
  template:
    metadata:
      labels:
        app: word-picker
        deployment: word-picker
    spec:
      containers:
      - name: word-picker
        image: tinmancoding/word-picker:v2.12
        ports:
        - containerPort: 5000
        volumeMounts:
        - name: options-config-map
          mountPath: /code/config
      volumes:
      - name: options-config-map
        configMap:
          name: word-picker-options
