k8s/word-picker-cd.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: word-picker
  labels:
    app: word-picker
  annotations:
    image.openshift.io/triggers: '[{"from":{"kind":"ImageStreamTag","name":"word-picker:latest"},"fieldPath":"spec.template.spec.containers[?(@.name==\"word-picker\")].image"}]'
spec:
  replicas: 1
  selector:
    matchLabels:
      app: word-picker
      deployment: word-picker
  template:
    metadata:
      labels:
        app: word-picker
        deployment: word-picker
    spec:
      containers:
      - name: word-picker
        image: image-registry.openshift-image-registry.svc:5000/landrasi-dev/word-picker:latest
---
apiVersion: v1
kind: Service
metadata:
  name: word-picker
  labels:
    app: word-picker
spec:
  type: ClusterIP
  selector:
    app: word-picker
  ports:
  - port: 5000
    protocol: TCP
    targetPort: 5000
