k8s/word-picker-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: word-picker
spec:
  host: word-picker.apps.sandbox-m3.1530.p1.openshiftapps.com
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
    certificate: |
      -----BEGIN CERTIFICATE-----
      MIIDWzCCAkMCFFPAyZKerGG4C+tefVQty2p7ogoQMA0GCSqGSIb3DQEBCwUAMGox
[...]
      -----END CERTIFICATE-----
    key: |
      -----BEGIN PRIVATE KEY-----
      MIIEvgIBADANBgkqhkiG9w0BAQEFAASCBKgwggSkAgEAAoIBAQDp4cJTAFCf583x
[...]
      +op7lQHlE1BRnT3SxBlrKOrO
      -----END PRIVATE KEY-----
  to:
    kind: Service
    name: word-picker
  port:
    targetPort: 5000
