k8s/netpol-word-picker.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-word-picker-only
spec:
  podSelector:
    matchLabels:
      app: word-picker
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: word-picker
    ports:
    - protocol: TCP
      port: 5000
